# forecaster

./: README.md
forecast/: CMakeLists.txt  main.cpp
forecast/config/: config.csv
forecast/forecast/: forecast.cpp  forecast.h
