cmake_minimum_required(VERSION 3.23)
project(forecast1)

set(CMAKE_CXX_STANDARD 20)



if(WIN32)
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
endif()

include(FetchContent)
FetchContent_Declare(cpr GIT_REPOSITORY https://github.com/libcpr/cpr.git
        GIT_TAG 0817715923c9705e68994eb52ef9df3f6845beba)
FetchContent_MakeAvailable(cpr)


include(FetchContent)
FetchContent_Declare(json URL https://github.com/nlohmann/json/releases/download/v3.11.2/json.tar.xz)
FetchContent_MakeAvailable(json)

add_executable(forecast main.cpp forecast/forecast.cpp forecast/forecast.h)
target_link_libraries(forecast PRIVATE cpr::cpr
                      PRIVATE nlohmann_json::nlohmann_json)




